# zirv-dynamic-cli

./: Cargo.toml  README.md  verification.txt
.github/workflows/: cd.yaml  ci.yaml
.zirv/: .shortcuts.yaml  commit.yaml  pre-test.yaml  shortcuts.yaml  test-capture.yaml  test-concurrentcy.yaml  test-fail.yaml  test-fallback-proceed-on-failure.yaml  test-fallback.yaml  test-no_options.yaml  test-on_failure.yaml  test-params.yaml  test-secret.yaml  test.yaml
chocolatey/zirv/: LICENSE.txt  VERIFICATION.txt  zirv.nuspec
homebrew/zirv/: zirv.rb
scripts/: update_chocolatey.ps1  update_homebrew.sh
src/: help.rs  input.rs  main.rs  run.rs  ui.rs  utils.rs  version.rs  yaml.rs
src/commands/: create.rs  help.rs  init.rs  mod.rs  version.rs
src/script_runner/: command.rs  command_content.rs  command_options.rs  command_types.rs  fallback_command.rs  mod.rs  operating_system.rs  options.rs  script.rs  secret.rs
src/structs/: file.rs  mod.rs  os.rs  script.rs  shortcuts.rs
