[package]
name = "zirv"
version = "2.0.9"
edition = "2024"
authors = ["Jonathan Solskov <josj@zirv.io>"]
description = "A CLI tool for executing developer-defined YAML scripts with support for interactive commands and OS-specific execution."
repository = "https://github.com/Glubiz/zirv"
license = "MIT"
readme = "README.md"
keywords = ["cli", "yaml", "automation", "developer"]
categories = ["development-tools"]

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34-deprecated"
serde_json = "1.0.145"
toml = "0.9.8"
dirs = "6.0.0"
dialoguer = "0.12.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time", "process"] }
hashbrown = { version = "0.16.1", features = ["serde"] }
futures = "0.3.31"
slab = "0.4.11"

[dev-dependencies]
tempfile = "3.23.0"

[profile.release]
opt-level       = "z"
lto             = true
codegen-units   = 1
debug           = false
debug-assertions = false
panic           = "abort"
strip           = "symbols"